# Ekonomikarti

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_evening.bat  run_evening.py  run_highlight.bat  run_highlight.py  run_morning.bat  run_morning.py  run_noon.bat  run_noon.py  run_weekly.bat  run_weekly.py
.github/workflows/: daily-evening.yml  daily-morning.yml  daily-noon.yml  weekly-saturday.yml  weekly-sunday.yml
data/manual/: fuel_prices.json
data/output/: evening_2026-05-05.json  evening_2026-05-06.json  evening_2026-05-07.json  evening_2026-05-08.json  evening_2026-05-11.json  evening_2026-05-12.json  evening_2026-05-13.json  evening_2026-05-14.json  evening_2026-05-15.json  evening_2026-05-18.json  evening_2026-05-19.json  evening_2026-05-20.json  evening_2026-05-21.json  evening_2026-05-22.json  evening_2026-05-25.json  evening_2026-05-26.json  evening_2026-05-27.json  evening_2026-05-28.json  evening_2026-05-29.json  evening_2026-06-01.json  evening_2026-06-02.json  evening_2026-06-03.json  evening_2026-06-04.json  evening_2026-06-05.json  evening_2026-06-08.json  evening_2026-06-09.json  evening_2026-06-10.json  evening_2026-06-11.json  evening_2026-06-12.json  highlight_2026-05-05.json  highlight_2026-05-10.json  highlight_2026-05-17.json  highlight_2026-05-24.json  highlight_2026-05-31.json  highlight_2026-06-07.json  highlight_2026-06-14.json  (+65 more)
scripts/: download_fonts.py
src/: config.py  pipeline.py
tests/: test_base.py  test_evening.py  test_highlight.py  test_noon.py  test_pipeline.py  test_tcmb.py  test_weekly.py
(+118 files in other folders)
