[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiyat-hafizasi"
version = "0.1.0"
description = "Daily Turkish economic indicators social card generator"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "yfinance>=0.2.40",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
